package proto_gcm;

message Parameters {
  optional string collapse_key = 1;
  optional bool delay_while_idle = 2;
  optional uint64 time_to_live = 3;
  optional string restricted_package_name = 4;
}

message SendMessageRequest {
  repeated string registration_ids = 1;
  optional string data = 2;
  optional Parameters params = 3;
}

message SendMessageResponse {
  enum ErrorCode {
    MALFORMED_JSON = 0;
  }
  optional ErrorCode error_code = 1;
}
